--- a/app/views/static_pages/help.html.erb
+++ b/app/views/static_pages/help.html.erb
@@ -1,2 +1,4 @@
-<h1>StaticPages#help</h1>
-<p>Find me in app/views/static_pages/help.html.erb</p>
+<% content_for :page, "Help" %>
+<h1>Help</h1>
+<p><strong>Nullam fermentum</strong> consectetur fringilla. Phasellus vel leo et lectus consectetur dignissim. Nunc rutrum urna felis, at vulputate erat tempor eu. Integer enim nisl, pharetra ac placerat vitae, dignissim quis mi. Vivamus in nunc enim. Sed ligula tortor, cursus in congue sed, tincidunt sed neque. Nunc fringilla dictum tellus a bibendum. Nunc ullamcorper quis magna interdum pretium. Fusce egestas, odio accumsan hendrerit eleifend, erat lorem interdum erat, ac tincidunt tortor augue sed mi.
+</p>
