--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -21,7 +21,7 @@ textarea {
 /* typography */
 h1, h2, h3, h4, h5, h6 {
   line-height: 1;
-  }
+}
 h1 {
   font-size: 3em;
   letter-spacing: -2px;
@@ -35,9 +35,24 @@ h2 {
   text-align: center;
   font-weight: normal;
   color: #777;
-  
 }
-p}
-{
-font-size: 1.1em;
-line-height: 1.7em
+p {
+  font-size: 1.1em;
+  line-height: 1.7em;
+}
+
+/* header */
+#logo {
+  float: left;
+  margin-right: 10px;
+  font-size: 1.7em;
+  color: #fff;
+  text-transform: uppercase;
+  letter-spacing: -1px;
+  padding-top: 9px;
+  font-weight: bold;
+}
+#logo:hover {
+  color: #ffff00;
+  text-decoration: none;
+}
