--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,39 +7,13 @@
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
-    <!--[if lt IE 9]>
-      <script src="//cdnjs.cloudflare.com/ajax/libs/html5shiv/r29/html5.min.js">
-      </script>
-    <![endif]-->
+    <%= render "layouts/shim" %>
   </head>
-
   <body>
-    <header class="navbar navbar-fixed-top navbar-inverse">
-      <div class="container">
-        <%= link_to "Chirper", root_path, id: "logo" %>
-        <nav>
-          <ul class="nav navbar-nav navbar-right">
-            <li><%=link_to "Home", root_path %></li>
-            <li><%=link_to "Help", help_path %></li>
-            <li><%=link_to "Log in", "#" %></li>
-          </ul>
-        </nav>
-      </div>
-    </header>
+    <%= render "layouts/header" %>
     <div class="container">
       <%= yield %>
-      <footer class="footer">
-        <small>
-          <strong>Chirper!</strong> A modest <em>Twitter</em> clone written in Ruby on Rails. Copyright &copy; 2020 by Lucas Ethan Calo. All Rights Reserved
-        </small>
-        <nav>
-          <ul>
-            <li><%= link_to "About", '#' %></li>
-            <li><%= link_to "Contact", '#' %></li>
-            <li><a href="https://rubyonrails.org/">Rails Homepage</a></li>
-          </ul>
-        </nav>  
-      </footer>
+      <%= render "layouts/footer" %>
     </div>    
   </body>
 </html>
