Fixed about and contact links

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -4,8 +4,8 @@
   </small>
   <nav>
     <ul>
-      <li><%= link_to "About", '#' %></li>
-      <li><%= link_to "Contact", '#' %></li>
+      <li><%= link_to "About", about_path %></li>
+      <li><%= link_to "Contact", contact_us_path %></li>
       <li><a href="https://rubyonrails.org/">Rails Homepage</a></li>
     </ul>
   </nav>  
