Refactored the title

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>    
-    <title><%= content_for :page %> | Chirper</title>
+    <title><%= full_title %></title>
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
