--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,7 +1,7 @@
 <div class="center jumbotron">
   <h1>Welcome to Chirper</h1>
   <h2>Like Twitter, only <em>better!</em></h2>
-  <%= link_to "Sign up now!", "#", class: "btn btn-lg btn-primary" %>
+  <%= link_to "Sign up now!", signup_path, class: "btn btn-lg btn-primary" %>
 </div>
 <p><strong>Lorem ipsum</strong> dolor sit amet, consectetur adipiscing elit. Mauris non ante non diam luctus condimentum eget non magna. Fusce in lacus eu libero mattis aliquet id nec nisi. Aliquam erat volutpat. Nulla vel nisi ac nisl sodales blandit laoreet non arcu. Duis vitae cursus risus. Proin hendrerit, velit quis malesuada mattis, ex lacus venenatis metus, non suscipit ipsum nulla at quam. Sed tristique consectetur est eget molestie. Nulla vulputate enim ac nulla euismod, a cursus eros volutpat. Maecenas non orci at ex consectetur semper. Nam facilisis mi tortor, non tincidunt mauris imperdiet id. Vestibulum eu vulputate magna. Suspendisse potenti.
 </p>
