--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -13,3 +13,4 @@
 <p><strong>Name:</strong> <%= @user.name %></p>
 <p><strong>Email:</strong> <%= @user.email %></p> 
 <p><strong>Created at:</strong> <%= @user.created_at %></p>
+<%= link_to "Log out", logout_path, method: :delete %>
