--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -2,22 +2,7 @@
 <h1>Edit profile</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user, local: true) do |f| %>
-      <%= render "shared/error_messages" %> 
-      <%= f.label :name %>
-      <%= f.text_field :name, placeholder: "John Smith", autofocus: true, class: "form-control" %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email, placeholder: "name@example.com", class: "form-control" %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: "form-control" %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-
-      <%= f.submit "Save changes", class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form", user: @user, submit_text: "Save changes" %>
     <div class="gravatar_edit">
       <%= gravatar_for(@user) %>
       <%= link_to "Change avatar", "https://gravatar.com/emails", target: "_blank" %>
