--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -2,21 +2,6 @@
 <h1>Sign up</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user, local: true) do |f| %>
-      <%= render "shared/error_messages" %> 
-      <%= f.label :name %>
-      <%= f.text_field :name, placeholder: "John Smith", autofocus: true, class: "form-control" %>
-
-      <%= f.label :email %>
-      <%= f.email_field :email, placeholder: "name@example.com", class: "form-control" %>
-
-      <%= f.label :password %>
-      <%= f.password_field :password, class: "form-control" %>
-
-      <%= f.label :password_confirmation, "Confirmation" %>
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-
-      <%= f.submit "Create my account", class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form", user: @user, submit_text: "Create new account" %>
   </div>
 </div>
