--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -2,9 +2,6 @@
 <h1>All accounts</h1>
 <ul class="users">
   <% @users.each do |user| %>
-    <li>    
-      <%= gravatar_for(user, size: 50) %>
-      <%= link_to(user.name, user) %>
-    </li>
+    <%= render "user", user: user %>
   <% end %>  
 </ul>
