--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,7 +1,5 @@
 <% content_for :page, "All Accounts" %>
 <h1>All accounts</h1>
 <ul class="users">
-  <% @users.each do |user| %>
-    <%= render "user", user: user %>
-  <% end %>  
+  <%= render @users %>
 </ul>
