--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,8 +1,10 @@
 <li>    
   <%= gravatar_for(user, size: 50) %>
-  <%= link_to(user.name, user) %>
   <% if current_user.admin? && !current_user?(user) %>
-    <%= link_to("| delete", user, method: :delete,
-      data:{confirm: "Are you sure you want to delete user #{user.name}?"}) %>
+    <%= link_to("\u{1F5D1}", user, method: :delete,
+      data:{confirm: "Are you sure you want to delete user #{user.name}?"},
+        class: "btn btn-danger") %>
   <% end %>
+  &nbsp;
+  <%= link_to(user.name, user) %>
 </li>
