Made footer copyright message more dynamic

--- a/app/views/layouts/_footer.html.erb
+++ b/app/views/layouts/_footer.html.erb
@@ -1,6 +1,6 @@
 <footer class="footer">
   <small>
-    <strong>Chirper!</strong> A modest <em>Twitter</em> clone written in Ruby on Rails. Copyright &copy; 2020 by Lucas Ethan Calo. All Rights Reserved
+    <strong>Chirper!</strong> A modest <em>Twitter</em> clone written in Ruby on Rails. Copyright &copy; <%= current_year %> by Lucas Ethan Calo. All Rights Reserved
   </small>
   <nav>
     <ul>
