--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,2 +1,11 @@
-<h1>PasswordResets#new</h1>
-<p>Find me in app/views/password_resets/new.html.erb</p>
+<% content_for :page, "Password reset" %>
+<h1>Password reset</h1>
+
+<div class="row">
+  <div class="col-md-6 col-md-offset-3">
+    <br>
+    <p> We will send your email some instructions to reset the password.</p>
+    <br>
+    <%= render "form" %>
+  </div>
+</div>
