--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -1,5 +1,7 @@
-<h1>User#password_reset</h1>
+<h1>Password reset</h1>
 
 <p>
-  <%= @greeting %>, find me in app/views/user_mailer/password_reset.html.erb
+  Hi, <%= @user.name%>,
+  Please click the link below to reset your password. It will expire in 15 minutes.
+  <%= link_to "Reset password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
 </p>
