--- a/app/views/user_mailer/password_reset.text.erb
+++ b/app/views/user_mailer/password_reset.text.erb
@@ -2,3 +2,4 @@ Password reset
 Hi, <%= @user.name%>,
 Please click the link below to reset your password. It will expire in 15 minutes.
 <%= link_to "Reset password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
+If you did not request for a password reset, please disregard this email.
