Changed email templates and added preview for the reset emails

--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -6,3 +6,13 @@
   <%= link_to "Reset password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
   If you did not request for a password reset, please disregard this email.
 </p>
+<footer>
+  <%= link_to "Chirper", root_url %> Copyright &copy; <%= current_year %> by Lucas Ethan Calo. All Rights Reserved.
+  <%= link_to "Contact us", contact_us_url %>
+  <%= link_to "Help", help_url %>
+  <%= link_to "About", about_url %>
+  <em>
+    This is an automated email, do not reply.
+  </em>
+  <strong>The content of this email is confidential and intended for the recipient specified in message only. It is strictly forbidden to share any part of this message with any third party, without a written consent of the sender.</strong>
+</footer>
