Refactored the form for edit

--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -6,6 +6,6 @@
     <br>
     <p> We will send your email some instructions to reset the password.</p>
     <br>
-    <%= render "form" %>
+    <%= render "form_new" %>
   </div>
 </div>
