--- a/app/views/password_resets/edit.html.erb
+++ b/app/views/password_resets/edit.html.erb
@@ -2,14 +2,6 @@
 <h1>Password reset</h1>
 <div class="row">
   <div class="col-md-6 col-md-offset-3">
-    <%= form_with(model: @user , local: true) do |f| %>
-      <%= render "shared/error_messages" %>
-      <%= f.label :password %>
-      <%= f.password_field :password, class: "form-control" %>
-      <%= f.label :password_confirmation, "Password Confirmation" %>
-      <%= f.password_field :password_confirmation, class: "form-control" %>
-
-      <%= f.submit "Reset Password", class: "btn btn-primary" %>
-    <% end %>
+    <%= render "form_edit", user: @user %>
   </div>
 </div>
