--- a/app/views/password_resets/_form_edit.html.erb
+++ b/app/views/password_resets/_form_edit.html.erb
@@ -1,5 +1,6 @@
 <%= form_with(model: user , local: true) do |f| %>
   <%= render "shared/error_messages" %>
+  <%= hidden_field_tag :email, user.email %>
   <%= f.label :password %>
   <%= f.password_field :password, class: "form-control" %>
   <%= f.label :password_confirmation, "Password Confirmation" %>
