--- a/app/views/user_mailer/account_activation.html.erb
+++ b/app/views/user_mailer/account_activation.html.erb
@@ -5,3 +5,4 @@
   Welcome to Chirper! Please click the link below to activate your account.
   <%= link_to "Activate account", edit_account_activation_url(@user.activation_token, email: @user.email) %>
 </p>
+<%= render "footer_for_account_activation"%>
