--- a/app/views/user_mailer/password_reset.html.erb
+++ b/app/views/user_mailer/password_reset.html.erb
@@ -6,4 +6,4 @@
   <%= link_to "Reset password", edit_password_reset_url(@user.reset_token, email: @user.email) %>
   If you did not request for a password reset, please disregard this email.
 </p>
-<%= render "footer_for_password_reset" %>
+<%= render "footer" %>
