--- a/app/views/password_resets/_form_edit.html.erb
+++ b/app/views/password_resets/_form_edit.html.erb
@@ -1,4 +1,4 @@
-<%= form_with(model: user , local: true) do |f| %>
+<%= form_with(model: user , url: password_reset_path(params[:reset_token]), local: true) do |f| %>
   <%= render "shared/error_messages" %>
   <%= hidden_field_tag :email, user.email %>
   <%= f.label :password %>
