--- a/app/views/password_resets/_form_edit.html.erb
+++ b/app/views/password_resets/_form_edit.html.erb
@@ -1,5 +1,5 @@
 <%= form_with(model: user , url: password_reset_path(params[:reset_token]), local: true) do |f| %>
-  <%= render "shared/error_messages" %>
+  <%= render "shared/error_messages", model: @user %>
   <%= hidden_field_tag :email, user.email %>
   <%= f.label :password %>
   <%= f.password_field :password, class: "form-control" %>
