--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,6 +8,15 @@
      </h1>
     </section>
   </aside>
+  <div class="col-md-eat">
+    <% if @user.chirps.any? %>
+      <h3>Chirps: <% @user.chirps.count %></h3>
+      <ol>
+        <%= render @chirps %>
+      </ol>
+      <%= will_paginate @chirps %>
+    <% end %>
+  <div>
 </div>
 
 <p><strong>Name:</strong> <%= @user.name %></p>
