--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -8,15 +8,15 @@
      </h1>
     </section>
   </aside>
-  <div class="col-md-eat">
+  <div class="col-md-8">
     <% if @user.chirps.any? %>
-      <h3>Chirps: <% @user.chirps.count %></h3>
-      <ol>
+      <h3>Chirps: <%= @user.chirps.count %></h3>
+      <ol class= "chirps">
         <%= render @chirps %>
       </ol>
       <%= will_paginate @chirps %>
     <% end %>
-  <div>
+  </div>
 </div>
 
 <p><strong>Name:</strong> <%= @user.name %></p>
