--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -10,7 +10,7 @@
   </aside>
   <div class="col-md-8">
     <% if @user.chirps.any? %>
-      <h3>Chirps: <%= @user.chirps.count %></h3>
+      <h3><%= pluralize(@user.chirps.count, "chirp") %></h3>
       <ol class= "chirps">
         <%= render @chirps %>
       </ol>
