--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -1,13 +1,17 @@
 <% if logged_in? %>
-  <div class= "row">
-    <aside class= "col-md-4">
-      <section class= "user_info">
+  <div class="row">
+    <aside class="col-md-4">
+      <section class="user_info">
         <%= render "shared/user_info" %>
-        <section class= "chirp_form">
+        <section class="chirp_form">
           <%= render "shared/chirp_form", chirp: @chirp %>
         </section>
       </section>
     </aside>
+    <div class="col-md-8">
+      <h3>Chirp feed</h3>
+      <%= render "shared/feed", feed_items: @feed_items %>
+    </div>
   </div>
 <% else %>
   <%= render "hero_section" %>
