--- a/app/views/chirps/_chirp.html.erb
+++ b/app/views/chirps/_chirp.html.erb
@@ -3,4 +3,7 @@
   <span class= "user"><%= link_to chirp.user.name, chirp.user %></span>
   <span class= "contents"><%= chirp.content %></span>
   <span class= "timestamp">Posted: <%= time_ago_in_words(chirp.created_at) %> ago</span>
+  <% if current_user?(chirp.user) %>
+    <%= link_to "Delete", chirp, method: :delete, data: { confirm: "Are you sure you want to delete this chirp?" } %>
+  <% end %>
 </li>
