--- a/app/views/shared/_chirp_form.html.erb
+++ b/app/views/shared/_chirp_form.html.erb
@@ -4,4 +4,5 @@
     <%= f.text_area :content, autofocus: true, placeholder: "Compose new chirp" %>
   </div>
   <%= f.submit "Post", class: "btn btn-primary" %>
+  <span class="image"><%= f.file_field :image %></span>
 <% end %>
