--- a/app/views/shared/_stats.html.erb
+++ b/app/views/shared/_stats.html.erb
@@ -2,13 +2,13 @@
 <div class="stats">
   <%= link_to following_user_path(user) do %>
     <strong id="following" class="stat">
-      <%= user.following.count %>
+      <%= user.following_count %>
     </strong>
     following
   <% end %>
   <%= link_to followers_user_path(user) do %>
     <strong id="followers" class="stat">
-      <%= user.followers.count %>
+      <%= user.follower_count %>
     </strong>
     followers
   <% end %>
