--- a/app/views/static_pages/home.html.erb
+++ b/app/views/static_pages/home.html.erb
@@ -2,10 +2,13 @@
   <div class="row">
     <aside class="col-md-4">
       <section class="user_info">
-        <%= render "shared/user_info" %>
-        <section class="chirp_form">
+        <%= render "shared/user_info" %>  
+      </section>
+      <section class="stats">
+        <%= render "shared/stats", user: @user %>
+      </section>
+      <section class="chirp_form">
           <%= render "shared/chirp_form", chirp: @chirp %>
-        </section>
       </section>
     </aside>
     <div class="col-md-8">
