--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -7,8 +7,12 @@
       <%= @user.name %>
      </h1>
     </section>
+    <section class="stats">
+      <%= render "shared/stats" %>
+    </section>
   </aside>
   <div class="col-md-8">
+    <%= render("follow_form", user: @user) if logged_in? %>
     <% if @user.chirps.any? %>
       <h3><%= pluralize(@user.chirps.count, "chirp") %></h3>
       <ol class= "chirps">
