--- a/app/views/users/_user.html.erb
+++ b/app/views/users/_user.html.erb
@@ -1,5 +1,5 @@
 <li>    
-  <%= gravatar_for(user, size: 50) %>
+  <%= link_to(gravatar_for(user, size: 50), user) %>
   <% if current_user.admin? && !current_user?(user) %>
     <%= link_to("\u{1F5D1}", user, method: :delete,
       data:{confirm: "Are you sure you want to delete user #{user.name}?"},
