--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -2,7 +2,7 @@
 <div class="row">
   <aside class="col-md-4">
     <section class="user_info">
-    <%= gravatar_for(@user) %>
+    <%= link_to(gravatar_for(@user), @user) %>
     <h1><%= @user.name %></h1>
     <span>
       <%= link_to "View my profile", @user %>
@@ -14,7 +14,7 @@
     <section class="stats">
       <%= render "shared/stats" %>
       <div class="user_avatars">
-        <%= render partial: "user_avatar", collection: @users %>
+        <%= render partial: "user_avatar", collection: @users, as: "user" %>
       </div>
     </section>
   </aside>
