--- a/app/views/users/show_follow.html.erb
+++ b/app/views/users/show_follow.html.erb
@@ -12,7 +12,7 @@
     </span>
     </section>
     <section class="stats">
-      <%= render "shared/stats" %>
+      <%= render "shared/stats", user: @user %>
       <div class="user_avatars">
         <%= render partial: "user_avatar", collection: @users, as: "user" %>
       </div>
